Fixed sprint component long sprint name overflow

--- a/frontend/src/app/components/backlog/sprint/sprint.component.sass
+++ b/frontend/src/app/components/backlog/sprint/sprint.component.sass
@@ -43,6 +43,8 @@ tasque-button
     font-size: 18px
     line-height: 114.88%
     padding-right: 15px
+    word-wrap: break-word
+    max-width: 37%
 
 .issues, .estimate
     display: flex
